# statestrike

./: .gitignore  0422statestrike_implementation_open_questions_v1.md  0422statestrike_senior_se_design_dossier_v1.md  AGENTS.md  pyproject.toml  回答.md
.codex/: SP_STATE.md
.plan/: 00next copy.md  00next.md  01next.md
docs/: CONTRACTS.md
src/statestrike/: __init__.py  baseline_input.py  cli.py  collector.py  enrichment.py  exports.py  funding.py  funding_pnl.py  hftbacktest_acceptance.py  identifiers.py  models.py  normalize.py  paths.py  policies.py  quality.py  readiness.py  reconnect.py  recovery.py  runtime.py  schemas.py  settings.py  smoke.py  storage.py
src/statestrike/backtests/: __init__.py  nautilus.py  nautilus_harness.py  nautilus_strategy_adapter.py
tests/: test_backtests.py  test_backtests_nautilus.py  test_baseline_input.py  test_cli.py  test_collector.py  test_contracts.py  test_enrichment.py  test_exports.py  test_funding.py  test_funding_pnl.py  test_hftbacktest_acceptance.py  test_identifiers.py  test_models.py  test_nautilus_harness.py  test_nautilus_strategy_adapter.py  test_normalize.py  test_p4_5_validation.py  test_paths.py  test_quality.py  test_readiness.py  test_reconnect_policy.py  test_recovery.py  test_runtime_smoke.py  test_schemas.py  test_settings.py  test_smoke.py  test_storage.py
tests/fixtures/hyperliquid/: active_asset_ctx.json  candle.json  l2_book.json  trades.json
