[project]
name = "statestrike"
version = "0.1.0"
description = "StateStrike Phase 1 data-platform bootstrap."
readme = "0422statestrike_senior_se_design_dossier_v1.md"
requires-python = ">=3.13,<3.14"
dependencies = [
  "loguru>=0.7.3",
  "pydantic==2.13.3",
  "pydantic-settings==2.14.0",
]

[project.scripts]
statestrike = "statestrike.cli:main"

[project.optional-dependencies]
phase1-data = [
  "duckdb==1.5.2",
  "pandas==2.3.3",
  "pandera==0.31.1",
  "pyarrow==24.0.0",
  "pybotters==1.11.2",
  "zstandard==0.25.0",
]
execution = [
  "hftbacktest==2.4.4",
  "nautilus_trader==1.225.0",
]

[dependency-groups]
dev = [
  "pytest==8.4.2",
]

[build-system]
requires = ["hatchling==1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/statestrike"]

[tool.pytest.ini_options]
testpaths = ["tests"]
